<resources>
    <string name="app_name">TodoList</string>
    <string name="back_button_content_description">Назад</string>
</resources>