...
    val selectedTodo by viewModel.selectedTodo.collectAsState()

    selectedTodo?.let { todo ->
        Scaffold(
            topBar = {
                TopAppBar(
                    title = { Text("Детали задачи") },
                    navigationIcon = {
                        IconButton(onClick = onBackClick) {
                            Icon(
                                imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                                contentDescription = stringResource(id = R.string.back_button_content_description)
                            )
...
